# cmake-cxx-project-template

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt  Config.cpp  Config.h
src/Core/Model/: CMakeLists.txt  SomeModel.cpp  SomeModel.h
src/Core/Repository/: CMakeLists.txt  SomeRepository.cpp  SomeRepository.h
src/Core/Service/: CMakeLists.txt  SomeService.cpp  SomeService.h
